3.1) Run JIM in JSF
4) Prepare to generate event with background events and hits.
5) jsf.conf editor. Which is executable from GUI
6) Integrate Bases/Spring generator in GUI pannel ( easy selection of process)
7) Move example/guiexam1/MainMacro.C to macro directory for use as
   standard macro.
8) Output of a root file should be turned off in some case.
9) Prepare an example macro to read multiple root file randomly/sequentially.
10) Prepare an example to use rootd.
11) Prepare interface to read generator data with only parton information
    such as Grace.
	

	
**********************************************************
jsf-1-10  Modification toward jsf-1-10 A.Miyamoto
**********************************************************
-----------------------	
25-June-1999 A.Miyamoto
-----------------------	
(1) Installed on RH6.0 using ROOT 2.22/06.
    bin/makespec is modified to create include/JSFConfig.h, where system information are
    stored.  Now JSFConfig.h can be used both in source files and Imakefiles.
(2) Due to change in ROOT 2.22, Imakefiles are modified slightly.
	
	
**********************************************************
jsf-1-9  28-May-1999 A.Miyamoto
**********************************************************
-----------------------	
27-May-1999 A.Miyamoto
-----------------------	
  (1) JSFQuickSim.cxx,JSFQuickSimCommon.h,JSFQuickSimParam.h,JSFSIMDST.cxx/h
     Changes to allow up to 20 layers of VTX and IMT

-----------------------	
26-May-1999 K.Fujii
-----------------------	
  (1) Compile everything with a PIC flag: +Z for HP.

-----------------------	
17-May-1999 A. Miyamoto
-----------------------	
  (1) Avoid memory leak in JSFCDCTrack::MovePivotToIP, by putting delete helix.
  (2) Add Xhsave in JSFBases class
  (3) In Pythia generator, mu/tau in documentation line cased trouble. 
      They were treated as long lived particle, which decayed after flying
      very long distance.  This bug was fixed.